--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@
 spring:
    application:
       name: demoservice
+     
 #   boot:
 #    admin:
 #      client:
@@ -19,7 +20,8 @@ spring:
           
 server:
    port: 8080
-
+   servlet:
+    context-path: /demo
       
 #eureka:
 #  client:
